{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 640,
  "lineage": "48263115-9fa8-a69f-725f-f7f29b6414d8",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "windows1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.237.199.149",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-08-02T01:22:00.439-07:00",
            "id": "projects/sunlit-almanac-392511/regions/us-east1/addresses/windows1",
            "name": "windows1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "sunlit-almanac-392511",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/regions/us-east1/addresses/windows1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "dbvm",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 0.8,
                "group": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/regions/us-east1/instanceGroups/windows-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "compression_mode": "DISABLED",
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-07-27T02:47:03.911-07:00",
            "enable_cdn": false,
            "fingerprint": "mK49nictfMg=",
            "generated_id": -1167096840,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/healthChecks/group-http-lb8-hc-dbvm"
            ],
            "id": "projects/sunlit-almanac-392511/global/backendServices/group-http-lb8-backend-dbvm",
            "load_balancing_scheme": "EXTERNAL",
            "name": "group-http-lb8-backend-dbvm",
            "port_name": "http",
            "project": "sunlit-almanac-392511",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/backendServices/group-http-lb8-backend-dbvm",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_address.windows1",
            "module.dynamic_backends.google_compute_health_check.default",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-27T02:46:51.002-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sunlit-almanac-392511/global/firewalls/group-http-lb8-hc-0",
            "log_config": [],
            "name": "group-http-lb8-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/networks/default",
            "priority": 1000,
            "project": "sunlit-almanac-392511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/firewalls/group-http-lb8-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.windows1",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.120.83.96",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-07-27T02:44:18.899-07:00",
            "id": "projects/sunlit-almanac-392511/global/addresses/group-http-lb8-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "group-http-lb8-address",
            "prefix_length": 0,
            "project": "sunlit-almanac-392511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/addresses/group-http-lb8-address"
          }
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/sunlit-almanac-392511/global/forwardingRules/group-http-lb8",
            "ip_address": "34.120.83.96",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "group-http-lb8",
            "port_range": "80-80",
            "project": "sunlit-almanac-392511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/forwardingRules/group-http-lb8",
            "target": "https://www.googleapis.com/compute/beta/projects/sunlit-almanac-392511/global/targetHttpProxies/group-http-lb8-http-proxy"
          },
          "dependencies": [
            "google_compute_address.windows1",
            "module.dynamic_backends.google_compute_backend_service.default",
            "module.dynamic_backends.google_compute_global_address.default",
            "module.dynamic_backends.google_compute_health_check.default",
            "module.dynamic_backends.google_compute_target_http_proxy.default",
            "module.dynamic_backends.google_compute_url_map.default",
            "module.dynamic_backends.google_compute_url_map.https_redirect",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-27T02:47:38.926-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/sunlit-almanac-392511/global/targetHttpProxies/group-http-lb8-http-proxy",
            "name": "group-http-lb8-http-proxy",
            "project": "sunlit-almanac-392511",
            "proxy_bind": false,
            "proxy_id": -1167096875,
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/targetHttpProxies/group-http-lb8-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/urlMaps/group-http-lb8-url-map"
          },
          "dependencies": [
            "google_compute_address.windows1",
            "module.dynamic_backends.google_compute_backend_service.default",
            "module.dynamic_backends.google_compute_health_check.default",
            "module.dynamic_backends.google_compute_url_map.default",
            "module.dynamic_backends.google_compute_url_map.https_redirect",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.dynamic_backends",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-27T02:47:26.661-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/backendServices/group-http-lb8-backend-dbvm",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "gUOj9QF-qmE=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/sunlit-almanac-392511/global/urlMaps/group-http-lb8-url-map",
            "map_id": -1167096895,
            "name": "group-http-lb8-url-map",
            "path_matcher": [],
            "project": "sunlit-almanac-392511",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/urlMaps/group-http-lb8-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.windows1",
            "module.dynamic_backends.google_compute_backend_service.default",
            "module.dynamic_backends.google_compute_health_check.default",
            "module.instance_template.google_compute_instance_template.tpl",
            "module.mig.data.google_compute_zones.available",
            "module.mig.google_compute_health_check.http",
            "module.mig.google_compute_health_check.https",
            "module.mig.google_compute_health_check.tcp",
            "module.mig.google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-east1/private",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-27T02:44:47.033-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/sunlit-almanac-392511/regions/us-east1/subnetworks/private",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/networks/main",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sunlit-almanac-392511",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/regions/us-east1/subnetworks/private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-east1/public",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-27T02:44:47.105-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/sunlit-almanac-392511/regions/us-east1/subnetworks/public",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public",
            "network": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/networks/main",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sunlit-almanac-392511",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/regions/us-east1/subnetworks/public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/sunlit-almanac-392511/global/networks/main",
            "mtu": 0,
            "name": "main",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "sunlit-almanac-392511",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sunlit-almanac-392511/global/networks/main"
          }
        }
      ]
    }
  ]
}